feedback for PS6

--- a/PS6/Yumeng/Question2.ipynb
+++ b/PS6/Yumeng/Question2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "37b67a06",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "08f37e66",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
     "# Input Files\n",
     "\n",
     "pdb = PDBFile('waterbox.pdb')\n",
-    "forcefield = ForceField('amber14-all.xml', 'amber14/tip3pfb.xml')\n",
+    "forcefield = ForceField('tip3p.xml')\n",
     "\n",
     "# System Configuration\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "# Simulation Options\n",
     "\n",
-    "steps = 500000\n",
+    "steps = 100000\n",
     "equilibrationSteps = 10000\n",
     "dcdReporter = DCDReporter('300k.dcd', 500)\n",
     "\n",
@@ -71,7 +71,7 @@
     "system.addForce(MonteCarloBarostat(pressure, temperature, barostatInterval))\n",
     "integrator = LangevinMiddleIntegrator(temperature, friction, dt)\n",
     "integrator.setConstraintTolerance(constraintTolerance)\n",
-    "simulation = Simulation(topology, system, integrator, platform)\n",
+    "simulation = Simulation(topology, system, integrator)\n",
     "simulation.context.setPositions(positions)\n",
     "\n",
     "# Minimize and Equilibrate\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "4aeddf46",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "# Input Files\n",
     "\n",
     "pdb = PDBFile('waterbox.pdb')\n",
-    "forcefield = ForceField('amber14-all.xml', 'amber14/tip3pfb.xml')\n",
+    "forcefield = ForceField('tip3p.xml')\n",
     "\n",
     "# System Configuration\n",
     "\n",
@@ -133,7 +133,7 @@
     "\n",
     "# Simulation Options\n",
     "\n",
-    "steps = 500000\n",
+    "steps = 100000\n",
     "equilibrationSteps = 10000\n",
     "dcdReporter = DCDReporter('370k.dcd', 500)\n",
     "\n",
@@ -147,7 +147,80 @@
     "system.addForce(MonteCarloBarostat(pressure, temperature, barostatInterval))\n",
     "integrator = LangevinMiddleIntegrator(temperature, friction, dt)\n",
     "integrator.setConstraintTolerance(constraintTolerance)\n",
-    "simulation = Simulation(topology, system, integrator, platform)\n",
+    "simulation = Simulation(topology, system, integrator)\n",
+    "simulation.context.setPositions(positions)\n",
+    "\n",
+    "# Minimize and Equilibrate\n",
+    "\n",
+    "print('Performing energy minimization...')\n",
+    "simulation.minimizeEnergy()\n",
+    "print('Equilibrating...')\n",
+    "simulation.context.setVelocitiesToTemperature(temperature)\n",
+    "simulation.step(equilibrationSteps)\n",
+    "\n",
+    "# Simulate\n",
+    "\n",
+    "print('Simulating...')\n",
+    "simulation.reporters.append(dcdReporter)\n",
+    "simulation.currentStep = 0\n",
+    "simulation.step(steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7fe3d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building system...\n",
+      "Performing energy minimization...\n",
+      "Equilibrating...\n",
+      "Simulating...\n"
+     ]
+    }
+   ],
+   "source": [
+    "pdb = PDBFile('waterbox.pdb')\n",
+    "forcefield = ForceField('tip3pfb.xml')\n",
+    "\n",
+    "# System Configuration\n",
+    "\n",
+    "nonbondedMethod = PME\n",
+    "nonbondedCutoff = 0.9*nanometers\n",
+    "ewaldErrorTolerance = 0.0005\n",
+    "constraints = HBonds\n",
+    "rigidWater = True\n",
+    "constraintTolerance = 0.00001\n",
+    "\n",
+    "# Integration Options\n",
+    "\n",
+    "dt = 0.002*picoseconds\n",
+    "temperature = 300*kelvin\n",
+    "friction = 1.0/picosecond\n",
+    "pressure = 1*atmospheres\n",
+    "barostatInterval = 25\n",
+    "\n",
+    "# Simulation Options\n",
+    "\n",
+    "steps = 100000\n",
+    "equilibrationSteps = 10000\n",
+    "dcdReporter = DCDReporter('300kfb.dcd', 500)\n",
+    "\n",
+    "# Prepare the Simulation\n",
+    "\n",
+    "print('Building system...')\n",
+    "topology = pdb.topology\n",
+    "positions = pdb.positions\n",
+    "system = forcefield.createSystem(topology, nonbondedMethod=nonbondedMethod, nonbondedCutoff=nonbondedCutoff,\n",
+    "    constraints=constraints, rigidWater=rigidWater, ewaldErrorTolerance=ewaldErrorTolerance)\n",
+    "system.addForce(MonteCarloBarostat(pressure, temperature, barostatInterval))\n",
+    "integrator = LangevinMiddleIntegrator(temperature, friction, dt)\n",
+    "integrator.setConstraintTolerance(constraintTolerance)\n",
+    "simulation = Simulation(topology, system, integrator)\n",
     "simulation.context.setPositions(positions)\n",
     "\n",
     "# Minimize and Equilibrate\n",
@@ -169,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7fe3d62",
+   "id": "291eaa5b",
    "metadata": {},
    "outputs": [],
    "source": []
